syntax = "proto3";

package io.mystore.shipping.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/stock_item_entity.proto";

option java_outer_classname = "StockItemToShipSkuItemService";

service StockItemToShipSkuItem {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnCreateStockItem(shipping.entity.StockItemCreated) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "stock_item"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "stock_item"
    };
  }
}
