syntax = "proto3";

package io.mystore.shipping.entity;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "StockItemEntity";

message StockItemState {
  string sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  string order_id = 4;
  string order_item_id = 5;
  google.protobuf.Timestamp shipped_utc = 6;
}

message StockItemCreated {
  string sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
}

message StockItemShipped {
  string sku_item_id = 1;
  string order_id = 2;
  string order_item_id = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}

message StockItemReleased {
  string sku_item_id = 1;
  string order_id = 2;
  string order_item_id = 3;
}
